[package]
name = "pointguard_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
tracing-subscriber = "0.3.17"
pointguard_engine_postgres = { path = "../engine_postgres" }
tokio = { version = "1.33.0", features = ["full"] }
pointguard_web_api = { path = "../web_api" }
tracing = "0.1.40"
reqwest = { version = "0.11.22", features = [
  "rustls",
  "json",
], default-features = false }
