[package]
name = "pointguard_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json"] }
pointguard_engine_postgres = { path = "../engine_postgres" }
pointguard_types = { path = "../types" }
tokio = { version = "1.33.0", features = [
  "macros",
  "time",
  "signal",
  "rt-multi-thread",
] }
pointguard_web_api = { path = "../web_api" }
tracing = "0.1.40"
reqwest = { version = "0.11.22", features = [
  "rustls",
  "json",
], default-features = false }
serde = { version = "1.0.192", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.108"
futures = "0.3.29"
clap = { version = "4.4.8", features = ["env", "derive"] }
flume = "0.11.0"
