[package]
name = "pointguard_engine_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
sea-orm = { version = "0.12.4", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.33.0", features = ["full"] }
