[package]
name = "pointguard_engine_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
nanoid = "0.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
