[package]
name = "pointguard_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.12.0", features = ["axum", "redoc"] }
schemars = { version = "0.8.15", features = ["url", "chrono"] }
pointguard_dependencies = { path = "../dependencies" }
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
pointguard_engine_postgres = { path = "../engine_postgres" }
serde = { version = "1.0.192", features = ["derive"] }
nanoid = "0.4.0"
serde_json = "1.0.108"
url = { version = "2.4.1", features = ["serde"] }
tracing = "0.1.40"
chrono = { version = "0.4.31", features = ["serde"] }
tower-livereload = "0.8.2"
handlebars = { version = "4.5.0", features = ["dir_source", "rust-embed"] }
notify = "6.1.1"
rust-embed = { version = "8.0.0", features = ["mime-guess"] }
tower-http = { version = "0.4.4", features = ["fs"] }
http = "0.2.10"
tower = "0.4.13"
sha2 = "0.10.8"
hex = "0.4.3"
