[package]
name = "pointguard_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.12.0", features = ["axum", "redoc"] }
schemars = { version = "0.8.15", features = ["url", "chrono"] }
axum = "0.6.20"
pointguard_engine_postgres = { path = "../engine_postgres" }
serde = { version = "1.0.192", features = ["derive"] }
nanoid = "0.4.0"
serde_json = "1.0.108"
url = { version = "2.4.1", features = ["serde"] }
tracing = "0.1.40"
chrono = { version = "0.4.31", features = ["serde"] }
tower-livereload = "0.8.2"
rust-embed = { version = "8.0.0", features = ["mime-guess"] }
tower-http = { version = "0.4.4", features = ["fs"] }
http = "0.2.10"
tower = "0.4.13"
flume = "0.11.0"
futures = "0.3.29"
